[package]
name = "ytdlrs_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"]}
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
envy = "0.4.2"
url = "2.3.1"
thiserror = "1.0.37"

[[bin]]
name = "ytdlrs"
path = "src/main.rs"
